[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py27']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | build
  | dist
)/
'''

[tool.poetry]
name = "certbot-dns-clouddns"
version = "1.0.0.post1"
description = "CloudDNS Authenticator plugin for Certbot"
authors = ["Radek SPRTA <sprta@vshosting.cz>"]
license = "Apache License 2.0"
readme = "README.rst"
homepage = "https://github.com/vshosting/certbot-dns-clouddns"
repository = "https://github.com/vshosting/certbot-dns-clouddns"
documentation = "https://github.com/vshosting/certbot-dns-clouddns"
packages = [
    { include = "certbot_dns_clouddns", from = "src" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
acme = "^0.29.0"
certbot = "^0.34.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
mock = "^3.0.5"
pre-commit = "*"
pytest = "^4.0.0"
requests-mock = "^1.7.0"

[tool.poetry.plugins."certbot.plugins"]
"dns-clouddns" = "certbot_dns_clouddns.dns_clouddns:Authenticator"
